fix up spacing in testimonial section

--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ nav {
    text-align: center;
    background: var(--color5);
    margin: 0;
-   padding: 4rem 1.70rem 4rem;
+   padding: 4rem 1.70rem 0;
    color: var(--color1)
 }
 .testimonial-block > h2 {
@@ -207,10 +207,10 @@ nav {
    margin-bottom: 0;
 }
 .client-title {
-   margin-top: 0;
+   margin: 0;
    font-size: 0.94rem;
    opacity: 50%;
-   margin-bottom: 4rem;
+   padding-bottom: 4rem;
 }
 
 .image-gallery {
